ont-api: major OntAnnotation & OntStatement refactoring, add more annotations tests, changes related to issue #30